# ProyectoFinal-Fundamentos-Computacion

./: .gitignore  CMakeLists.txt  README.md
src/assets/data/: arch_tree1.csv  arch_tree2.csv  arch_tree3.csv
src/private/: arch.c  dancing.c  definitions.c  functions.c  main.c  main_menu.c  map.c  menu.c  mini-game.c  player.c  projectile.c  settings.c  start_animation.c
src/public/: arch.h  definitions.h  functions.h  main.h  main_menu.h  map.h  menu.h  mini-game.h  player.h  projectile.h  settings.h  start_animation.h
